@@ -45,35 +45,34 @@ if (!$language_id) {
 $df->setLanguageID($language_id);
 $d_arr =& $df->getDocuments();
 if (!$_arr || count($d_arr) <1){
-	$df->setLanguageId(0);	
+	$df->setLanguageId(0);
 	$d_arr = &$df->getDocuments();
 }
 
 docman_header($Language->getText('docman_display_doc','title'),$Language->getText('docman_display_doc','section'),'docman','',$g->getPublicName());
 
 if (!$d_arr || count($d_arr) < 1) {
-	print "<strong>".$Language->getText('docman','error_no_docs')."</strong><p>";
-} else { 
+	print "<strong>".$Language->getText('docman','error_no_docs')."</strong>";
+} else {
 	doc_droplist_count($group_id, $language_id);
 
 	print "\n<ul>";
 	for ($i=0; $i<count($d_arr); $i++) {
 
 		//
-		//	If we're starting a new "group" of docs, put in the 
+		//	If we're starting a new "group" of docs, put in the
 		//	docGroupName and start a new <ul>
 		//
 		if ($d_arr[$i]->getDocGroupID() != $last_group) {
-			print (($i==0) ? '' : '</ul>');
-			print "\n\n<li><strong>". $d_arr[$i]->getDocGroupName() ."</strong></li><ul>";
+			print (($i==0) ? '' : '</ul></li>');
+			print "\n\n<li><strong>". $d_arr[$i]->getDocGroupName() ."</strong></li><li style=\"list-style: none\"><ul>";
 			$last_group=$d_arr[$i]->getDocGroupID();
 		}
-		print "\n<li><a href=\"view.php/$group_id/".$d_arr[$i]->getID()."/".$d_arr[$i]->getFileName()."\">". 
+		print "\n<li><a href=\"view.php/$group_id/".$d_arr[$i]->getID()."/".$d_arr[$i]->getFileName()."\">".
 			$d_arr[$i]->getName()." [ ".$d_arr[$i]->getFileName()." ]</a>".
-			"\n<br /><em>".$Language->getText('docman','description').":</em> ".$d_arr[$i]->getDescription();
-
+			"\n<br /><em>".$Language->getText('docman','description').":</em> ".$d_arr[$i]->getDescription()."</li>\n";
 	}
-	print "\n</ul>\n";
+	print "\n</ul></li></ul>\n";
 }
 
 docman_footer(array());
